--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "axios": "^1.3.4",
     "flowbite": "^1.6.4",
+    "pinia": "^2.0.33",
     "typed.js": "^2.0.15",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
