--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.3.4",
     "flowbite": "^1.6.4",
     "pinia": "^2.0.33",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typed.js": "^2.0.15",
     "vue": "^3.2.47",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^4.1.6",
     "vue-typed-js": "^0.1.2"
   },
@@ -22,6 +25,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.3.1",
     "vite": "^4.1.4"
   }
