--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@lottiefiles/lottie-player": "^1.7.1",
     "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.3.4",
     "flowbite": "^1.6.4",
