--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@lottiefiles/lottie-player": "^1.7.1",
+    "@vueuse/core": "^9.13.0",
     "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.3.4",
     "flowbite": "^1.6.4",
