--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,16 @@
     "@lottiefiles/lottie-player": "^1.7.1",
     "@vueuse/core": "^9.13.0",
     "@vueuse/motion": "^2.0.0-beta.12",
-    "axios": "^1.3.4",
+    "axios": "^1.3.5",
     "flowbite": "^1.6.4",
     "pinia": "^2.0.33",
+    "sweetalert2": "^11.7.3",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typed.js": "^2.0.15",
     "vue": "^3.2.47",
     "vue-carousel": "^0.18.0",
     "vue-router": "^4.1.6",
+    "vue-sweetalert2": "^5.0.5",
     "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
