--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^9.13.0",
     "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.3.5",
+    "cloudinary-core": "^2.13.0",
     "flowbite": "^1.6.4",
     "pinia": "^2.0.33",
     "sweetalert2": "^11.7.3",
@@ -23,7 +24,8 @@
     "vue-carousel": "^0.18.0",
     "vue-router": "^4.1.6",
     "vue-sweetalert2": "^5.0.5",
-    "vue-typed-js": "^0.1.2"
+    "vue-typed-js": "^0.1.2",
+    "vue3-toastify": "^0.1.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
