--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@hennge/vue3-pagination": "^1.0.17",
     "@lottiefiles/lottie-player": "^1.7.1",
+    "@vue-stripe/vue-stripe": "^4.5.0",
     "@vueuse/core": "^9.13.0",
     "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^1.3.5",
