--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.3.5",
     "cloudinary-core": "^2.13.0",
     "flowbite": "^1.6.4",
+    "moment": "^2.29.4",
     "pinia": "^2.0.33",
     "sweetalert2": "^11.7.3",
     "tailwind-scrollbar-hide": "^1.1.7",
